Updated the index.html code

--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
     <meta property="og:title" content="SLOTS Humanitarian Initiatives | Sharing Love On The Streets" />
     <meta property="og:description" content="Making a difference in Nigerian communities through compassionate action and sustainable impact." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:url" content="https://slotsng.netlify.app" />
+    <meta property="og:image" content="https://slotsng.netlify.app/images/slots-logo.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="SLOTS Humanitarian Initiatives" />
     <meta name="twitter:description" content="Sharing Love On The Streets - One Act at a Time" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="https://slotsng.netlify.app/images/slots-logo.png" />
     
     <link rel="icon" href="/favicon.png" type="image/png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
